[tool.poetry]
name = "dl-market-analysis"
version = "0.1.0"
description = "A project to experiment with deep learning approaches to analysing market data and implementing a neural network within a trading algorithm."
authors = ["Michal Jonak <michaljonak.1999@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
sklearn = "^0.0"
ipykernel = "^6.15.0"
jupyter = "^1.0.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
